force-app/main/default/objects/AI_Conversation__c/AI_Conversation__c.object-meta.xml
<CustomObject>
  <label>AI Conversation</label>
  <pluralLabel>AI Conversations</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Conversation Number</label>
    <displayFormat>AIC-{00000}</displayFormat>
  </nameField>
  <sharingModel>Private</sharingModel>
</CustomObject>