force-app/main/default/objects/AI_Conversation__c/fields/Agent_Response__c.field-meta.xml
<CustomField>
    <fullName>Agent_Response__c</fullName><label>Agent Response</label><type>LongTextArea</type><visibleLines>5</visibleLines><length>32768</length>
</CustomField>