force-app/main/default/objects/AI_Conversation__c/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName><label>Escalated</label><type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>