force-app/main/default/objects/AI_Conversation__c/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName><label>Related Order</label><type>Lookup</type><referenceTo>Order__c</referenceTo><relationshipName>AI_Conversations</relationshipName>
</CustomField>