force-app/main/default/objects/AI_Conversation__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName><label>Session ID</label><type>Text</type><length>255</length>
</CustomField>