force-app/main/default/objects/AI_Conversation__c/fields/User_Prompt__c.field-meta.xml
<CustomField>
    <fullName>User_Prompt__c</fullName><label>User Prompt</label><type>LongTextArea</type><visibleLines>5</visibleLines><length>32768</length>
</CustomField>